--- a/wiki/encyclopedia/static/encyclopedia/styles1.css
+++ b/wiki/encyclopedia/static/encyclopedia/styles1.css
@@ -13,7 +13,7 @@ h1 {
 }
 
 textarea {
-    height: 90vh;
+    height: 50vh;
     width: 80%;
 }
 
@@ -35,4 +35,9 @@ textarea {
 
 .sidebar h2 {
     margin-top: 5px;
+}
+
+.input-box {
+    width: 900px;
+    height: 900px;
 }
