--- a/wiki/encyclopedia/templates/encyclopedia/sub.html
+++ b/wiki/encyclopedia/templates/encyclopedia/sub.html
@@ -5,12 +5,10 @@
 {% endblock %}
 
 {% block body %}
-    <h1>All Pages</h1>
+    <h1>Did you mean?</h1>
 
-    <ul>
-        {% for entry in entries %}
-            <li><a href="{% url 'title' entry %}" title="{{ test }}">{{ test }}</a></li>
-        {% endfor %}
-    </ul>
+    {% for result in test %}
+    <li><a href="{% url 'title' result %}" title="{{ result }}">{{ result }}</a></li>
+    {% endfor %}
 
 {% endblock %}
